<resources>
    <string name="about_page">About</string>
    <string name="app_name">Habitic</string>
    <string name="archived">Archived</string>
    <string name="channel_description">For habit notifications</string>
    <string name="channel_name">My Habits</string>
    <string name="copying">Copy</string>
    <string name="create_habit">Create</string>
    <string name="date">April 20, 2023</string>
    <string name="day_of_whatever">Day of whatever</string>
    <string name="delete">Delete</string>
    <string name="exported">Export</string>
    <string name="export_description">Exported data from the app</string>
    <string name="habit_description">Habit longer description</string>
    <string name="habit_done_description">This habit has been complemented once!</string>
    <string name="habit_title">Habit Title</string>
    <string name="imported">Import</string>
    <string name="month_of_whatever">Month of whatever</string>
    <string name="no_habits">No habits yet, tap \"Manage\" below to add some!</string>
    <string name="save">Save</string>
    <string name="save_habit">Save</string>
    <string name="title">Title</string>
    <string name="title_manage">Manage</string>
    <string name="title_habits">Home</string>
    <string name="title_summary">Overview</string>
    <string name="time">at 12:23PM</string>
    <string name="times_per_day">Times per day</string>
    <string name="times_per_week">Times per week</string>
    <string name="times_per_month">Times for month</string>
    <string name="week_of_whatever">Week of whatever</string>
</resources>
